webclient/src/balloon.css
.balloon-dashboard .title,
.balloon-dashboard .button,
.balloon-dashboard .stat-box {
	font-family: monospace !important;
}

.balloon-dashboard .top-left-container {
	position: fixed;
	top: 20px;
	left: 20px;
	z-index: 4;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	pointer-events: none;
}

.balloon-dashboard .ui-container {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	pointer-events: none;
	position: relative;
}

.balloon-dashboard .title {
	color: white;
	border: 1px solid white;
	padding: 10px 15px;
	font-size: 1.2em;
	font-weight: bold;
}

.balloon-dashboard .button {
	background-color: white;
	color: black;
	border: 1px solid white;
	padding: 10px 15px;
	font-size: 1.2em;
	cursor: pointer;
	margin-left: -1px;
}

.balloon-dashboard .top-row {
	display: flex;
	align-items: center;
}

.balloon-dashboard .show-wind-control {
	position: absolute;
	top: 100%;
	left: 0;
	display: flex;
	align-items: center;
	font-size: 1.2em;
	padding: 0 15px;
	margin: 0;
	opacity: 0;
	transition: opacity .3s ease;
}

.balloon-dashboard .show-wind-control.visible {
	opacity: 1;
	padding: 10px 15px;
	margin-top: -1px;
}

.balloon-dashboard .show-wind-control .checkbox {
	width: 0.8em;
	height: 0.8em;
	border: 1px solid white;
	margin-right: 0.7em;
	background-color: transparent;
}

.balloon-dashboard .show-wind-control .checkbox.checked {
	background-color: white;
}

.balloon-dashboard .stats-container {
	z-index: 4;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	pointer-events: none;
	margin-top: -1px;
}

.balloon-dashboard .stat-box {
	border: 1px solid white;
	padding: 5px 10px;
	color: white;
	text-align: left;
	white-space: nowrap;
	margin: -1px 0 0 -1px;
	background-color: rgba(0, 0, 0, 0.5);
}

.balloon-dashboard .stat-row {
	display: flex;
	flex-wrap: wrap;
	padding: 1px 0 0 1px;
}

.balloon-dashboard .stats-container > .stat-row + .stat-row,
.balloon-dashboard .bottom-stats-container > .stat-row + .stat-row {
	margin-top: -1px;
}

.balloon-dashboard .stat-label {
	font-size: 0.7em;
}

.balloon-dashboard .stat-value {
	font-size: 1em;
}

.balloon-dashboard .time-ago {
	font-size: 1em;
}

.balloon-dashboard .bottom-stats-container {
	position: fixed;
	bottom: 20px;
	left: 20px;
	z-index: 4;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	pointer-events: none;
}

.balloon-dashboard .bottom-right-container {
	position: fixed;
	bottom: 20px;
	right: 20px;
	z-index: 4;
	pointer-events: none;
}

.balloon-dashboard .top-right-container {
	position: fixed;
	top: 20px;
	right: 20px;
	z-index: 4;
	pointer-events: none;
	text-align: right;
}

.balloon-dashboard .top-right-container .stat-box {
	text-align: right;
}

.balloon-dashboard .fullscreen-button {
	padding: 8px 10px;
	display: flex;
	align-items: center;
	justify-content: center;
}

.balloon-dashboard .fullscreen-icon-container {
	width: 16px;
	height: 16px;
	position: relative;
}

.balloon-dashboard .fullscreen-icon-corner {
	width: 6px;
	height: 6px;
	position: absolute;
}

.balloon-dashboard .fullscreen-icon-corner.top-left {
	top: 0;
	left: 0;
	border-top: 2px solid white;
	border-left: 2px solid white;
}

.balloon-dashboard .fullscreen-icon-corner.top-right {
	top: 0;
	right: 0;
	border-top: 2px solid white;
	border-right: 2px solid white;
}

.balloon-dashboard .fullscreen-icon-corner.bottom-left {
	bottom: 0;
	left: 0;
	border-bottom: 2px solid white;
	border-left: 2px solid white;
}

.balloon-dashboard .fullscreen-icon-corner.bottom-right {
	bottom: 0;
	right: 0;
	border-bottom: 2px solid white;
	border-right: 2px solid white;
}

.balloon-dashboard .globe-container {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	z-index: 3;
}

.balloon-dashboard .globe-error-container {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: black;
	z-index: 3;
}

@media (max-width: 767px) {
	.balloon-dashboard .top-left-container {
		top: 10px;
		left: 10px;
	}
	.balloon-dashboard .bottom-stats-container {
		bottom: 10px;
		left: 10px;
	}
	.balloon-dashboard .bottom-right-container {
		bottom: 10px;
		right: 10px;
	}
	.balloon-dashboard .top-right-container {
		top: 10px;
		right: 10px;
	}
}

.balloon-dashboard .modal-overlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.7);
	z-index: 10;
	display: flex;
	justify-content: center;
	align-items: center;
}

.balloon-dashboard .modal-content {
	background-color: #222;
	color: #ddd;
	padding: 0px 20px;
	border-radius: 5px;
	max-width: 1200px;
	width: 90%;
	max-height: 90vh;
	overflow-y: auto;
	position: relative;
	line-height: 1.6;
	border: 1px solid #444;
}

.balloon-dashboard .modal-content h1, .balloon-dashboard .modal-content h2, .balloon-dashboard .modal-content h3 {
	margin-top: 1em;
	margin-bottom: 0.5em;
}

.balloon-dashboard .modal-content p {
	margin-bottom: 1em;
}

.balloon-dashboard .modal-content img {
	width: 100%;
	max-width: 30rem;
}

.balloon-dashboard .modal-content a {
	color: #61dafb;
	text-decoration: none;
	overflow-wrap: anywhere;
	word-break: break-word;
}

.balloon-dashboard .modal-content a:hover {
	text-decoration: underline;
}

.balloon-dashboard .modal-content code {
	background-color: #333;
	color: #eee;
	padding: 2px 4px;
	border-radius: 3px;
}

.balloon-dashboard .modal-content pre {
	background-color: #333;
	color: #eee;
	padding: 10px;
	border-radius: 3px;
	overflow-x: auto;
}

.balloon-dashboard .modal-close-button {
	position: absolute;
	top: 0px;
	right: 10px;
	background: none;
	border: none;
	font-size: 3rem;
	cursor: pointer;
	color: #aaa;
}

.balloon-dashboard .modal-close-button:hover {
	color: #fff;
}

.balloon-dashboard .modal-content .mod-header.mod-ui,
.balloon-dashboard .modal-content .collapse-indicator {
	display: none;
}

